--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     text-transform: capitalize;
     margin: 0;
+    font-weight: 600;
 }
 
 
@@ -33,6 +34,7 @@
 }
 
 .menu-1 ul li {
+    font-weight: 600;
     list-style: none;
     position: relative;
     display: inline-block;
@@ -65,20 +67,20 @@
 }
 
 .menu-1 {
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 
 .menu-1 a {
     font-size: 30px;
-    color: white;
+    color: black;
     text-decoration: none;
     transition: 0.8s ease;
 }
 
 .menu-1 a:hover {
     transition: 0.5s ease;
-    color: black;
+    color: white;
 }
 
 .menu-1 li {
@@ -102,6 +104,7 @@
 }
 
 .conteiner-2 {
+    margin-bottom: 100px;
     display: flex;
 }
 
@@ -126,3 +129,38 @@
 .conteiner-2-img img {
     width: 100%;
 }
+
+footer{
+    height: 100%;
+    width: 100%;
+    display: inline-flex;
+    background: linear-gradient(to bottom, white, blue)
+}
+
+footer a{
+    color: black;
+    text-decoration: none;
+}
+
+footer li{
+
+    padding: 10px 15px;
+    margin: 8px 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: 0.3s;
+    font-weight: 600;
+
+}
+
+.conteiner-3{
+    margin-bottom: 100px;
+    height: 300px;
+    background:linear-gradient(to right,transparent,blue, white),linear-gradient(to left,transparent,blue,white);
+}
+
+.conteiner-4-img img{
+    width: 300px;
+}
+
